Fix overlapping on mobile

--- a/_sass/base/_spacing.scss
+++ b/_sass/base/_spacing.scss
@@ -199,6 +199,9 @@
     .mt-xs-60{
         margin-top: 60px;
     }
+    .mt-xs-100{
+        margin-top: 100px;
+    }
     .mb-xs-0{
         margin-bottom: 0;
     }
